Division de los features del proyecto

--- a/index.html
+++ b/index.html
@@ -6,29 +6,29 @@
     <title>Document</title>
 </head>
 <body>
-    <nav id="barraNavegacion">
+    <nav id="nav-bar">
 
     </nav>
-    
-    <main id = "inicio">
+
+    <main id = "home">
 
     </main>
     
-    <section id="Nosotros">
+    <section id="about-us">
 
     </section>
 
 
-    <section id="AcercaDe">
+    <section id="about">
 
     </section>
 
-    <section id="beneficios">
+    <section id="benefits">
 
 
     </section>
 
-    <section id="requisitos">
+    <section id="requeriments">
 
 
     </section>
