Se implementó la barra de navegación responsive

--- a/index.html
+++ b/index.html
@@ -3,32 +3,46 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="css/nav-bar.css">
     <title>Document</title>
 </head>
 <body>
-    <nav id="barraNavegacion">
-
+    <nav id="nav-bar">
+    <div class="logo"><img src="./images/logo .png" alt="logo del producto"></div>
+        <ul class="nav-links">
+            <li><a href="#home">Inicio</a></li>
+            <li><a href="#about-us">Nosotros</a></li>
+            <li><a href="#about">Acerca de</a></li>
+            <li><a href="#benefits">Beneficios</a></li>
+            <li><a href="#requeriments">Requisitos</a></li>
+            <li><a href="#faq">FAQ</a></li>
+        </ul>
+        <div class="hamburger">
+            <div class="bar"></div>
+            <div class="bar"></div>
+            <div class="bar"></div>
+        </div>
     </nav>
-    
-    <main id = "inicio">
+
+    <main id = "home">
 
     </main>
     
-    <section id="Nosotros">
+    <section id="about-us">
 
     </section>
 
 
-    <section id="AcercaDe">
+    <section id="about">
 
     </section>
 
-    <section id="beneficios">
+    <section id="benefits">
 
 
     </section>
 
-    <section id="requisitos">
+    <section id="requeriments">
 
 
     </section>
@@ -36,5 +50,6 @@
     <section id="faq">
 
     </section>
+    <script src="./js/script.js"></script>
 </body>
 </html>
