--- a/index.html
+++ b/index.html
@@ -1,17 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/index.css">
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/nav-bar.css">
+    <link rel="stylesheet" href="css/about-us.css">
+
     <title>Document</title>
 </head>
+
 <body>
     <nav id="nav-bar">
-      
-    <div><img src="./images/logo.svg" alt="logo del producto" class="logo-nav"></div>
+
+        <div><img src="./images/logo.svg" alt="logo del producto" class="logo-nav"></div>
         <ul class="nav-links">
             <li><a href="#home">Inicio</a></li>
             <li><a href="#about-us">Nosotros</a></li>
@@ -28,26 +32,39 @@
 
     </nav>
 
-    <main id = "home">
+    <main id="home">
         <div>
             <img src="./images/fondo1.png" alt="" class="background">
         </div>
-         <div>
+        <div>
             <img src="./images/logo.svg" alt="" class="logo-background">
         </div>
         <h1 class="title">Comparte tu auto y gana, o alquila y vive la experiencia. Únete hoy a Automovile-Unit.</h2>
-        <div class="button">
-            Registrarme
-        </div>
+            <div class="button">
+                Registrarme
+            </div>
     </main>
-    
+
     <section id="about-us" class="container">
+        <h2 class="subTitle">Nosotros</h2>
+        <div class="section-about-us">
+            <div class="img-about-us">
+                <img src="images/logo-startup.svg" alt="">
+            </div>
+            <div class="text-about-us">
+                Somos Speed-Driving un startup integrado por estudiantes del quinto ciclo de la carrera de Ingeniería de
+                Software de la Universidad Peruana de Ciencias Aplicadas
+                <br>
+                <br>
+                <br>
+                Nuestra misión es revolucionar la movilidad en el Perú al proporcionar una plataforma segura y eficiente que permita a las personas compartir vehículos de manera confiable y conveniente.
+            </div>
+        </div>
 
     </section>
 
 
     <section id="about" class="container">
-
     </section>
 
     <section id="benefits" class="container">
@@ -68,4 +85,5 @@
     </section>
     <script src="./js/script.js"></script>
 </body>
+
 </html>
