--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <br>
                 <br>
                 <br>
-                Nuestra misión es revolucionar la movilidad en el Perú al proporcionar una plataforma segura y eficiente que permita a las personas compartir vehículos de manera confiable y conveniente.
+                Nuestra misión es revolucionar la movilidad en el Perú al proporcionar una plataforma segura y eficiente
+                que permita a las personas compartir vehículos de manera confiable y conveniente.
             </div>
         </div>
 
