--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/home.css">
     <link rel="stylesheet" href="css/nav-bar.css">
     <link rel="stylesheet" href="css/about-us.css">
-
+    <link rel="stylesheet" href="css/about.css">
     <title>Document</title>
 </head>
 
@@ -39,7 +39,7 @@
         <div>
             <img src="./images/logo.svg" alt="" class="logo-background">
         </div>
-        <h1 class="title">Comparte tu auto y gana, o alquila y vive la experiencia. Únete hoy a Automovile-Unit.</h2>
+        <h1 class="title">Comparte tu auto y gana, o alquila y vive la experiencia. Únete hoy a Automovile-Unit.</h1>
             <div class="button">
                 Registrarme
             </div>
@@ -66,9 +66,25 @@
 
 
     <section id="about" class="container">
+        <h2 class="subTitle">Acerca de</h2>
+        <div class="section-about">
+            <div >
+                <img src="images/logo.svg" alt="" class="img-about">
+            </div>
+            <div class="text-about-container">
+                <h2>¿Qué es AutomovilUnit?</h2>
+                <div class="text-about">
+                    Automovile-Unit revoluciona el alquiler de vehículos al actuar como intermediario entre
+                    propietarios y arrendatarios. Esta plataforma aprovecha la economía colaborativa, permitiendo
+                    a propietarios generar ingresos extra al alquilar sus vehículos subutilizados, mientras ofrece a los
+                    arrendatarios un acceso sencillo a una variedad de automóviles.
+                </div>
+            </div>
+
+        </div>
     </section>
 
-    <section id="benefits" class="container">
+    <section id="benefits" class="container">f
 
 
     </section>
