--- a/index.html
+++ b/index.html
@@ -1,106 +1,203 @@
 <!DOCTYPE html>
 <html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="css/index.css">
-    <link rel="stylesheet" href="css/home.css">
-    <link rel="stylesheet" href="css/nav-bar.css">
-    <link rel="stylesheet" href="css/about-us.css">
-    <link rel="stylesheet" href="css/about.css">
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0"
+    />
+
+    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="css/home.css" />
+    <link rel="stylesheet" href="css/nav-bar.css" />
+    <link rel="stylesheet" href="css/about-us.css" />
+    <link rel="stylesheet" href="css/about.css" />
+    <link rel="stylesheet" href="css/benefits.css" />
     <title>Document</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <nav id="nav-bar">
-
-        <div><img src="./images/logo.svg" alt="logo del producto" class="logo-nav"></div>
-        <ul class="nav-links">
-            <li><a href="#home">Inicio</a></li>
-            <li><a href="#about-us">Nosotros</a></li>
-            <li><a href="#about">Acerca de</a></li>
-            <li><a href="#benefits">Beneficios</a></li>
-            <li><a href="#requeriments">Requisitos</a></li>
-            <li><a href="#faq">FAQ</a></li>
-        </ul>
-        <div class="hamburger">
-            <div class="bar"></div>
-            <div class="bar"></div>
-            <div class="bar"></div>
-        </div>
-
+      <div>
+        <img src="./images/logo.svg" alt="logo del producto" class="logo-nav" />
+      </div>
+      <ul class="nav-links">
+        <li><a href="#home">Inicio</a></li>
+        <li><a href="#about-us">Nosotros</a></li>
+        <li><a href="#about">Acerca de</a></li>
+        <li><a href="#benefits">Beneficios</a></li>
+        <li><a href="#requeriments">Requisitos</a></li>
+        <li><a href="#faq">FAQ</a></li>
+      </ul>
+      <div class="hamburger">
+        <div class="bar"></div>
+        <div class="bar"></div>
+        <div class="bar"></div>
+      </div>
     </nav>
 
     <main id="home">
-        <div>
-            <img src="./images/fondo1.png" alt="" class="background">
-        </div>
-        <div>
-            <img src="./images/logo.svg" alt="" class="logo-background">
-        </div>
-        <h1 class="title">Comparte tu auto y gana, o alquila y vive la experiencia. Únete hoy a Automovile-Unit.</h1>
-            <div class="button">
-                Registrarme
-            </div>
+      <div>
+        <img src="./images/fondo1.png" alt="" class="background" />
+      </div>
+      <div>
+        <img src="./images/logo.svg" alt="" class="logo-background" />
+      </div>
+      <h1 class="title">
+        Comparte tu auto y gana, o alquila y vive la experiencia. Únete hoy a
+        Automovile-Unit.
+      </h1>
+      <div class="button">Registrarme</div>
     </main>
 
     <section id="about-us" class="container">
-        <h2 class="subTitle">Nosotros</h2>
-        <div class="section-about-us">
-            <div class="img-about-us">
-                <img src="images/logo-startup.svg" alt="">
-            </div>
-            <div class="text-about-us">
-                Somos Speed-Driving un startup integrado por estudiantes del quinto ciclo de la carrera de Ingeniería de
-                Software de la Universidad Peruana de Ciencias Aplicadas
-                <br>
-                <br>
-                <br>
-                Nuestra misión es revolucionar la movilidad en el Perú al proporcionar una plataforma segura y eficiente
-                que permita a las personas compartir vehículos de manera confiable y conveniente.
-            </div>
+      <h2 class="subTitle">Nosotros</h2>
+      <div class="section-about-us">
+        <div class="img-about-us">
+          <img src="images/logo-startup.svg" alt="" />
         </div>
-
+        <div class="text-about-us">
+          Somos Speed-Driving un startup integrado por estudiantes del quinto
+          ciclo de la carrera de Ingeniería de Software de la Universidad
+          Peruana de Ciencias Aplicadas
+          <br />
+          <br />
+          <br />
+          Nuestra misión es revolucionar la movilidad en el Perú al proporcionar
+          una plataforma segura y eficiente que permita a las personas compartir
+          vehículos de manera confiable y conveniente.
+        </div>
+      </div>
     </section>
-
 
     <section id="about" class="container">
-        <h2 class="subTitle">Acerca de</h2>
-        <div class="section-about">
-            <div >
-                <img src="images/logo.svg" alt="" class="img-about">
-            </div>
-            <div class="text-about-container">
-                <h2>¿Qué es AutomovilUnit?</h2>
-                <div class="text-about">
-                    Automovile-Unit revoluciona el alquiler de vehículos al actuar como intermediario entre
-                    propietarios y arrendatarios. Esta plataforma aprovecha la economía colaborativa, permitiendo
-                    a propietarios generar ingresos extra al alquilar sus vehículos subutilizados, mientras ofrece a los
-                    arrendatarios un acceso sencillo a una variedad de automóviles.
-                </div>
-            </div>
-
+      <h2 class="subTitle">Acerca de</h2>
+      <div class="section-about">
+        <div>
+          <img src="images/logo.svg" alt="" class="img-about" />
         </div>
+        <div class="text-about-container">
+          <h2>¿Qué es AutomovilUnit?</h2>
+          <div class="text-about">
+            Automovile-Unit revoluciona el alquiler de vehículos al actuar como
+            intermediario entre propietarios y arrendatarios. Esta plataforma
+            aprovecha la economía colaborativa, permitiendo a propietarios
+            generar ingresos extra al alquilar sus vehículos subutilizados,
+            mientras ofrece a los arrendatarios un acceso sencillo a una
+            variedad de automóviles.
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section id="benefits" class="container">f
+    <section id="benefits" class="container">
+      <h2 class="subTitle">Beneficios</h2>
+      <div class="section-benefits">
+        <div class="container-benefits-mode">
+          <div></div>
+          <div class="container-user">
+            <div>
+              <img src="./images/propietario.svg" alt="" />
+            </div>
+            <h4>Para propietarios</h4>
+          </div>
+          <div class="container-benefits">
+            <div class="arrow-container">
+              <span class="material-symbols-outlined"> arrow_back_ios </span>
+            </div>
+            <div class="card-benefits" id="1">
+              <img src="./images/confianza.svg" alt="" />
+              <div class="card-text">
+                <h4>Comunidad de Confianza</h4>
+                <p>
+                  Automovile-Unit establece un ambiente seguro para propietarios
+                  y arrendatarios.
+                </p>
+              </div>
+            </div>
+            <div class="card-benefits" id="1">
+              <img src="./images/condiciones.svg" alt="" />
+              <div class="card-text">
+                <h4>Controla tus Condiciones</h4>
+                <p>
+                  En Automovile-Unit, eres el jefe. Tú decides las tarifas de
+                  alquiler, la disponibilidad y las condiciones para tus
+                  arrendatarios.
+                </p>
+              </div>
+            </div>
+            <div class="card-benefits" id="1">
+              <img src="./images/dinero.svg" alt="" />
+              <div class="card-text">
+                <h4>Gana con Tu Vehículo Extra</h4>
+                <p>
+                  Convierte tu vehículo en una fuente de ingresos extra al
+                  unirte a Automovile-Unit.
+                </p>
+              </div>
+            </div>
+            <div class="arrow-container">
+              <span class="material-symbols-outlined"> arrow_forward_ios </span>
+            </div>
+          </div>
+        </div>
 
-
+        <div class="container-benefits-mode">
+          <div class="container-user">
+            <div>
+                <img src="./images/arrendatario.svg" alt="" id="arrendatario"/>
+            </div>
+            <h4>Para arrendatarios</h4>
+          </div>
+          <div class="container-benefits">
+            <div class="arrow-container">
+              <span class="material-symbols-outlined"> arrow_back_ios </span>
+            </div>
+            <div class="card-benefits" id="1">
+              <img src="./images/vehiculos 1.svg" alt="" />
+              <div class="card-text">
+                <h4>Variedad a tu Elección</h4>
+                <p>
+                  Ya sea para un viaje de negocios o una aventura en carretera,
+                  encontrarás el automóvil que se adapte a tu estilo y
+                  preferencia.
+                </p>
+              </div>
+            </div>
+            <div class="card-benefits" id="1">
+              <img src="./images/ahorro.svg" alt="" />
+              <div class="card-text">
+                <h4>Ahorra en tus Aventuras</h4>
+                <p>
+                  Alquila un vehículo por el tiempo que necesitas y ahorra
+                  dinero en comparación con la propiedad tradicional.
+                </p>
+              </div>
+            </div>
+            <div class="card-benefits" id="1">
+              <img src="./images/relajado.svg" alt="" />
+              <div class="card-text">
+                <h4>Experiencia sin Preocupaciones</h4>
+                <p>
+                  Di adiós a los costos de mantenimiento, seguros y trámites que
+                  vienen con la propiedad de un automóvil.
+                </p>
+              </div>
+            </div>
+            <div class="arrow-container">
+              <span class="material-symbols-outlined"> arrow_forward_ios </span>
+            </div>
+          </div>
+        </div>
+      </div>
     </section>
 
-    <section id="requeriments" class="container">
+    <section id="requeriments" class="container"></section>
 
-
-    </section>
-
-    <section id="faq" class="container">
-
-    </section>
-    <section id="footer" class="container">
-
-    </section>
+    <section id="faq" class="container"></section>
+    <section id="footer" class="container"></section>
     <script src="./js/script.js"></script>
-</body>
-
+  </body>
 </html>
