--- a/index.html
+++ b/index.html
@@ -3,6 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Automovil-Unit</title>
+    <meta
+      name="description"
+      content="Explora la comodidad y la libertad de alquilar vehículos con Automovil-Unit. Ofrecemos una amplia gama de opciones de alquiler de autos para satisfacer tus necesidades de viaje. Descubre tarifas competitivas, modelos modernos y un proceso de reserva fácil. ¡Emprende tu próximo viaje con confianza alquilando un vehículo con nosotros!"
+    />
+    <meta name="author" content="Speed-Drivingun" />
+
+    <meta
+      name="keywords"
+      content="Alquiler de autos en Lima,
+Rentar vehículos,
+Arriendo de coches,
+Autos de alquiler,
+Alquiler de carros,
+Vehículos en alquiler,
+Rent a car Lima"
+    />
 
     <link
       rel="stylesheet"
@@ -17,6 +34,7 @@
     <link rel="stylesheet" href="css/benefits.css" />
     <link rel="stylesheet" href="css/requeriments.css" />
     <link rel="stylesheet" href="css/faq.css" />
+    <link rel="stylesheet" href="css/footer.css" />
 
     <title>Document</title>
   </head>
@@ -224,30 +242,80 @@
 
     <section id="faq" class="container">
       <h2 class="subTitle">Preguntas frecuentes</h2>
-      <br>
-      <button class="accordion">¿Qué medidas de seguridad existen para proteger mis transacciones y datos personales?</button>
+      <br />
+      <button class="accordion">
+        ¿Qué medidas de seguridad existen para proteger mis transacciones y
+        datos personales?
+      </button>
       <div class="panel">
         <p>
-          La seguridad es nuestra prioridad. Utilizamos medidas de cifrado avanzadas para proteger tus datos y las transacciones. Además, contamos con sistemas de verificación de identidad para garantizar la confianza en nuestra comunidad.
+          La seguridad es nuestra prioridad. Utilizamos medidas de cifrado
+          avanzadas para proteger tus datos y las transacciones. Además,
+          contamos con sistemas de verificación de identidad para garantizar la
+          confianza en nuestra comunidad.
         </p>
       </div>
 
-      <button class="accordion">¿Cómo puedo registrarme como arrendador en Automovile-Unit?</button>
+      <button class="accordion">
+        ¿Cómo puedo registrarme como arrendador en Automovile-Unit?
+      </button>
       <div class="panel">
         <p>
-          Registrarse como arrendador es fácil. Simplemente visita nuestro sitio web, crea una cuenta y sigue las instrucciones para listar tu vehículo. Completa la información requerida, establece tus tarifas y condiciones, ¡y estarás listo para empezar a alquilar!
+          Registrarse como arrendador es fácil. Simplemente visita nuestro sitio
+          web, crea una cuenta y sigue las instrucciones para listar tu
+          vehículo. Completa la información requerida, establece tus tarifas y
+          condiciones, ¡y estarás listo para empezar a alquilar!
         </p>
       </div>
 
-      <button class="accordion">¿Cómo se establecen las tarifas de alquiler?</button>
+      <button class="accordion">
+        ¿Cómo se establecen las tarifas de alquiler?
+      </button>
       <div class="panel">
         <p>
-          Tú, como arrendador, tienes el control total sobre las tarifas de alquiler. Puedes establecer precios competitivos basados en el modelo de tu vehículo, su estado y otros factores. Te sugerimos investigar tarifas similares en tu área para tomar una decisión informada.
+          Tú, como arrendador, tienes el control total sobre las tarifas de
+          alquiler. Puedes establecer precios competitivos basados en el modelo
+          de tu vehículo, su estado y otros factores. Te sugerimos investigar
+          tarifas similares en tu área para tomar una decisión informada.
         </p>
       </div>
     </section>
 
-    <section id="footer" class="container"></section>
+    <section id="footer" class="container">
+      <div>
+        <img src="./images/logo .png" alt="" />
+      </div>
+      <div class="lists-container">
+        <h4>Listas</h4>
+
+        <div class="lists">
+          <ul>
+            <li>Inicio</li>
+            <li>Nosotros</li>
+            <li>Acerca de</li>
+          </ul>
+
+          <ul>
+            <li>Beneficios</li>
+            <li>Requisitos</li>
+            <li>Preguntas frecuentes</li>
+          </ul>
+        </div>
+      </div>
+
+      <div class="contact">
+        <h4>Contacto</h4>
+        <ul>
+          <li>
+            <span class="material-symbols-outlined"> location_on </span>Av. la
+            Marina 2810, San Miguel 15087
+          </li>
+          <li>
+            <span class="material-symbols-outlined"> mail </span>AutomovilUnit
+          </li>
+        </ul>
+      </div>
+    </section>
 
     <script src="./js/script.js"></script>
 
